fixed wraping problem in sidenav

--- a/app/assets/stylesheets/sidenav.css.scss
+++ b/app/assets/stylesheets/sidenav.css.scss
@@ -28,4 +28,5 @@
 .sidenav.affixed-bottom { position: absolute; }
 .sidenav {
   max-width: 185px;
+  white-space: nowrap;
 }
